--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ subprojects {
     }
 
     dependencies {
-        developmentOnly("$boot:spring-boot-devtools")
+//        developmentOnly("$boot:spring-boot-devtools")
         implementation "$boot:spring-boot-starter-security"
         implementation 'com.fasterxml.jackson.core:jackson-annotations'
 
